compiler/w_session/tests/errors/invalid-operations.w
fn main(a: f32, b: f32, c: f64, d: f64) {
    a % b;
    a & b;
    a | b;
    a ^ b;
    a >> b;
    a << b;
    
    c % d;
    c & d;
    c | d;
    c ^ d;
    c >> d;
    c << d;
}